fixed footer gap

--- a/docs/main.css
+++ b/docs/main.css
@@ -302,7 +302,7 @@ a img {
   position: relative;
   width: 100%;
   height: 15vh;
-  margin-bottom: -7px; /*Fix for safari gap*/
+  margin-bottom: -10px; /*Fix for safari gap*/
   min-height: 100px;
   max-height: 150px;
 }
@@ -313,7 +313,7 @@ a img {
   align-items: center;
   text-align: center;
   position: relative;
-  height: 20vh;
+  height: 10px;
   background-color: white;
 }
 
